--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 kazoo = "^2.9.0"
 pytest = "^7.4.2"
 requests = "^2.31.0"
+boto3 = "^1.28.44"
 
 
 [tool.poetry.group.dev.dependencies]
